<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CrearusuarioActivity">

    <include layout="@layout/toolbar_mi"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/fab_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inpt_meil_crearUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/fab_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inpt_name_crearUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomre"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/fab_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inpt_user_crearUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/fab_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inpt_password_crearUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwor"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/fab_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inpt_confirPass_crearUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirContraseña"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/butt_registrate_crearUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/RaisedButtonDarck"
                android:text="@string/reistrarse"
                android:layout_marginTop="@dimen/fab_margin"/>

        </LinearLayout>


    </ScrollView>

</android.support.design.widget.CoordinatorLayout>