<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_item_tarjI"
    CardView:cardCornerRadius="@dimen/diez"
    android:layout_marginTop="@dimen/fab_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/diez"
        android:paddingBottom="@dimen/diez"
        android:paddingRight="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin">

        <TextView
            android:layout_width="@dimen/treinta"
            android:layout_height="wrap_content"
            android:text="@string/numero"
            android:textSize="@dimen/texto_diesiceis"
            android:textColor="@color/colorNegro"/>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="@dimen/texto_diesiceis"
                android:textColor="@color/colorNegro"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duracion_video"
                android:textSize="@dimen/texto_diez"
                android:textColor="@color/colorGriz"/>




        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/cuarenta"
            android:layout_height="@dimen/cuarenta"
            android:background="@drawable/ic_play_circle_filled_black_24dp"/>


    </LinearLayout>



</android.support.v7.widget.CardView>